made AdminCardController
